Fix navbar overflow with the addition of insights

--- a/static/css/less_css/less/tba_bootstrap_overrides/tba_navbar_overrides.less
+++ b/static/css/less_css/less/tba_bootstrap_overrides/tba_navbar_overrides.less
@@ -40,7 +40,7 @@
 
 .navbar .nav > li > a {
   @elementHeight: 20px;
-  padding: ((@navbarHeight - @elementHeight) / 2 + 2) 10px ((@navbarHeight - @elementHeight) / 2 + 1);
+  padding: ((@navbarHeight - @elementHeight) / 2 + 2) 8px ((@navbarHeight - @elementHeight) / 2 + 1);
   font-size: 14px;
   margin: 0;
 }
